eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
  - host: a8192a4ce2dec403195329b67f87249b-662657797.us-east-1.elb.amazonaws.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: simple-bank-api-service
            port: 
              number: 80
  tls:
  - hosts:
    - a8192a4ce2dec403195329b67f87249b-662657797.us-east-1.elb.amazonaws.com
    secretName: simple-bank-api-cert
